[project]
name = "map-reshader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "litemapy>=0.11.0b0",
    "nbtlib>=2.0.4",
    "z3-solver>=4.15.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "pytest>=8.0.0",
    "hypothesis>=6.151.9",
]

[tool.pyright]
reportImplicitStringConcatenation = false
ignore = ["./typings"]

[tool.ruff]
exclude = ["typings"]

[tool.ruff.lint]
ignore = ["E741"]
